# coop-backend

./: .env  README.md  pyproject.toml  requirements.txt
api/: index.py
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
