[project]
name = "coop-backend"
version = "0.1.0"
description = "FastAPI backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "python-dotenv",
    "psycopg2-binary",
    "python-jose",
    "passlib[bcrypt]",
    "python-multipart"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


# 🔥 เพิ่มส่วนนี้เพื่อแก้ error api + app
[tool.setuptools]
packages = ["app"]
