[project]
name = "coop-backend"
version = "0.1.0"
description = "FastAPI backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "python-dotenv",
    "psycopg2-binary",
    "python-jose",
    "passlib[bcrypt]",
    "bcrypt",              # 🔥 เพิ่มตัวนี้
    "python-multipart"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# 🔥 แก้ multiple packages
[tool.setuptools]
packages = ["app"]
