[project]
name = "coop-backend"
version = "0.1.0"
description = "FastAPI backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "python-dotenv",
    "psycopg2-binary",
    "python-jose",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
